--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Incredibox</title>
-    <meta name="author" content="So Far So Good" />
-    <meta name="copyright" content="http://www.sofarsogood.fr" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <meta
-      name="viewport"
-      content="user-scalable=no,initial-scale=1,minimum-scale=1,width=device-width,height=device-height"
-    />
+    <meta name="author" content="So Far So Good">
+    <meta name="copyright" content="http://www.sofarsogood.fr">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport"content="user-scalable=no,initial-scale=1,minimum-scale=1,width=device-width,height=device-height">
     <link rel="stylesheet" type="text/css" href="css/style.min.css" />
   </head>
   <body class="black">
